app/assets/stylesheets/pages/_diary.css.sass
.user-diaries-wrapper
  margin-top: 30px

.diary-new, .diary-edit, .diary-delete
  +sassy-button("flat", 0, $fz-s, $c-album-new)
  padding: 10px 20px
  &:hover, &:focus
    color: $c-white
    text-decoration: none
.diary-delete
  +sassy-button("flat", 0, $fz-s, lighten($c-dark-grey, 25))
  padding: 10px 20px

.user-diary-wrapper, .user-diary-detail-wrapper
  @extend %user-sidebar-block-shadow
  @extend %block-hover-effect
  position: relative
  padding: 20px
  margin-bottom: 20px
  background-color: $c-user-sidebar-bg
  .user-diary-baku
    @extend %baku
  .user-diary-edit-btn-wrapper
    position: absolute
    right: 20px
    top: 20px

  .user-diary-info-wrapper
    padding-left: 70px
  .user-diary-title
    margin-top: 5px
    font-size: $fz-l
    font-weight: bold
  .user-diary-subinfo
    color: $c-user-status-message-subinfo
    font-size: $fz-m
  .user-diary-tags
    +pie-clearfix
    margin-top: 5px
    font-size: $fz-s
    ul
      padding: 0
    li
      list-style: none
      float: left
      padding-right: 10px
      color: $c-user-diary-tags
  .user-diary-content
    margin-top: 20px
    color: $c-user-diary-content-text
    img
      display: block
      max-width: 70%
      margin: 25px auto
      border: 5px solid #fff
      +box-shadow(0 0 3px #888)
      +transition(all, 0.3s)
      &:hover
        +box-shadow(0 0 20px #888)
        +transform(rotate(1deg))
        +backface-visibility(hidden)

  .read-more-btn
    text-align: right
  .more
    +sassy-button("flat", 0, $fz-s, $c-user-diary-readmore)
    padding: 10px 20px
    text-align: center




.user-diary-latest-list
  @extend %user-sidebar-block
  @extend %user-sidebar-block-shadow
  @extend %block-hover-effect
  .title-wrapper
    border-bottom: 2px solid $c-user-diary-latest-list-title
  .title
    color: $c-user-diary-latest-list-title
    padding-bottom: 5px
    margin-bottom: 10px
  .diary-unit
    +clearfix
    display: block
    margin-top: 10px
    padding-top: 10px
    border-top: 1px solid $c-user-diart-latest-list-divider
    color: #000
    &:first-child
      border: none
  .diary-cover-img
    +span(3)
  .diary-title
    +span(9)
    padding: 0 10px
    h4
      font-size: $fz-m


.user-diary-comments-list
  @extend %user-sidebar-block
  @extend %user-sidebar-block-shadow
  @extend %block-hover-effect
  .title
    color: $c-user-diary-comments-list-title
  .title-wrapper
    border-bottom: 2px solid $c-user-diary-comments-list-title
  .diary-comment-unit
    margin-top: 10px
    padding-top: 10px
    border-top: 1px solid $c-user-diart-latest-list-divider
    &:first-child
      border: none
    .comment-author
      color: $c-user-diary-comments-list-author
    .comment
      overflow: hidden
      text-overflow: ellipsis
      white-space: nowrap
      a
        color: $c-user-diary-comments-list-text


.show-diary-main-content-wrapper
  +pie-clearfix
  @extend %col-8
  .user-status-info
    margin-top: 0
  .user-diary-detail-wrapper
    margin-top: 25px


.show-diary-widget-wrapper
  @extend %col-4
  .diary-map-wrapper
    @extend %user-sidebar-block
    @extend %user-sidebar-block-shadow
    @extend %block-hover-effect
    margin-top: 0
    padding: 0
    .title-wrapper
      text-align: center
      background-color: $c-diary-map-title-bg
      color: $c-diary-map-title

